--- a/Core/packages.config
+++ b/Core/packages.config
@@ -6,4 +6,6 @@
   <package id="MvvmCross.Platform" version="4.4.0" targetFramework="portable45-net45+win8+wpa81" />
   <package id="MvvmCross.Plugin.Messenger" version="4.4.0" targetFramework="portable45-net45+win8+wpa81" />
   <package id="MvvmCross.StarterPack" version="4.4.0" targetFramework="portable45-net45+win8+wpa81" />
+  <package id="SQLite.Net.Core-PCL" version="3.1.1" targetFramework="portable45-net45+win8+wpa81" />
+  <package id="SQLite.Net-PCL" version="3.1.1" targetFramework="portable45-net45+win8+wpa81" />
 </packages>
