Addition online database and publication service on Azure

--- a/ContactList.Web/ContactList.Web.csproj
+++ b/ContactList.Web/ContactList.Web.csproj
@@ -162,6 +162,8 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <None Include="Properties\PublishProfiles\ContactListWebService - FTP.pubxml" />
+    <None Include="Properties\PublishProfiles\ContactListWebService - Web Deploy.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
